--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,7 +28,7 @@ jobs:
         run: go test -v ./...
 
       - name: Docker Login
-        if: startsWith(github.ref, 'refs/tags/v')
+        #if: startsWith(github.ref, 'refs/tags/v')
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -43,3 +43,13 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+
+      - name: Run GoReleaser Nightly
+        uses: goreleaser/goreleaser-action@v4
+        if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
+        with:
+          version: latest
+          args: release --clean --nightly
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+
