--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Build
         run: go build -v ./...
-  
+
       - name: Test
         run: go test -v ./...
 
@@ -44,12 +44,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
-      - name: Run GoReleaser Nightly
-        uses: goreleaser/goreleaser-action@v4
-        if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
-        with:
-          version: latest
-          args: release --clean --nightly
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      # - name: Run GoReleaser Nightly
+      #   uses: goreleaser/goreleaser-action@v4
+      #   if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
+      #   with:
+      #     version: latest
+      #     args: release --clean --nightly
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
