--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,6 +21,9 @@ jobs:
         with:
           go-version: 1.19
 
+      - name: Create k8s Kind Cluster
+        uses: helm/kind-action@v1.5.0
+
       - name: Build
         run: go build -v ./...
 
