--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,7 +50,7 @@ jobs:
       - name: Run GoReleaser DEV
         uses: goreleaser/goreleaser-action@v4
         with:
-          version: dev
+          version: latest
           args: release --clean --snapshot
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
