--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,6 +30,11 @@ jobs:
       - name: Test
         run: go test -v ./...
 
+
+      - name: Set up Docker Buildx
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: docker/setup-buildx-action@v2
+
       - name: Docker Login
         #if: startsWith(github.ref, 'refs/tags/v')
         uses: docker/login-action@v2
@@ -51,8 +56,10 @@ jobs:
         uses: goreleaser/goreleaser-action@v4
         with:
           version: latest
-          args: release --clean --snapshot
+          tags: dev
+          args: release --clean
         env:
+          GORELEASER_CURRENT_TAG: dev
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
       # - name: Run GoReleaser Nightly
