--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -54,6 +54,7 @@ dockers:
   goarch: amd64
   build_flag_templates:
   - --platform=linux/amd64
+  - --build-arg CLOUDFLARE_CLOUDFLARED_VERSION={{ .Env.CLOUDFLARE_CLOUDFLARED_VERSION }}
   - --label=org.opencontainers.image.title={{ .ProjectName }}
   - --label=org.opencontainers.image.description={{ .ProjectName }}
   - --label=org.opencontainers.image.url=https://github.com/mabels/{{ .ProjectName }}
@@ -69,6 +70,7 @@ dockers:
   goarch: arm64
   build_flag_templates:
   - --platform=linux/arm64/v8
+  - --build-arg CLOUDFLARE_CLOUDFLARED_VERSION={{ .Env.CLOUDFLARE_CLOUDFLARED_VERSION }}
   - --label=org.opencontainers.image.title={{ .ProjectName }}
   - --label=org.opencontainers.image.description={{ .ProjectName }}
   - --label=org.opencontainers.image.url=https://github.com/mabels/{{ .ProjectName }}
