--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,7 +50,7 @@ jobs:
       - name: Get Latest Cloudflared Version
         run: |
           node .github/workflows/query_versions.js cloudflare/cloudflared | tee -a $GITHUB_ENV
-          echo "TAG=$(echo ${{ secrets.GH_TOKEN }} | sed s/.*v/v/)" | tee -a $GITHUB_ENV
+          echo "DOCKER_VERSION=$(echo ${{ github.ref }} | sed s/^.*v//)" | tee -a $GITHUB_ENV
 
       - name: Set up Docker Buildx
         if: startsWith(github.ref, 'refs/tags/v')
@@ -65,13 +65,13 @@ jobs:
           password: ${{ secrets.GH_TOKEN }}
 
       - name: Check image
-        id: image_exists
-        uses: cloudposse/github-action-docker-image-exists@main
-        with:
-          registry: ghcr.io
-          organization: mabels
-          repository: cloudflared-controller
-          tag: ${{ env.TAG }}-cfd${{ env.CLOUDFLARE_CLOUDFLARED_VERSION }}
+        run: |
+          if docker manifest inspect  ghcr.io/mabels/cloudflared-controller:${{ env.DOCKER_VERSION }}-cfd${{ env.CLOUDFLARE_CLOUDFLARED_VERSION }}
+          then
+            echo "FOUND"
+          else
+            echo "NOT-FOUND"
+          fi
 
       - name: Run GoReleaser RELEASE
         uses: goreleaser/goreleaser-action@v4
