--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,14 +50,17 @@ jobs:
       - name: Get Latest Cloudflared Version
         run: |
           node .github/workflows/query_versions.js cloudflare/cloudflared | tee -a $GITHUB_ENV
-          echo "DOCKER_VERSION=$(echo ${{ github.ref }} | sed s/^.*v//)" | tee -a $GITHUB_ENV
+          if [[ ${{ github.ref }} == refs/tags/v* ]]
+          then
+             echo "CONTROLLER_VERSION=$(echo ${{ github.ref }} | sed s/^.*v//)" | tee -a $GITHUB_ENV
+          fi
 
       - name: Set up Docker Buildx
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: ${{ env.CONTROLLER_VERSION != '' }}
         uses: docker/setup-buildx-action@v2
 
       - name: Docker Login
-        #if: startsWith(github.ref, 'refs/tags/v')
+        if: ${{ env.CONTROLLER_VERSION != '' }}
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -65,27 +68,25 @@ jobs:
           password: ${{ secrets.GH_TOKEN }}
 
       - name: Check image
+        if: ${{ env.CONTROLLER_VERSION != '' }}
         run: |
-          if [[ ${{github.ref}} == "v*" ]]
+          if docker manifest inspect  ghcr.io/mabels/cloudflared-controller:${{ env.CONTROLLER_VERSION }}-cfd${{ env.CLOUDFLARE_CLOUDFLARED_VERSION }}
           then
-            if docker manifest inspect  ghcr.io/mabels/cloudflared-controller:${{ env.DOCKER_VERSION }}-cfd${{ env.CLOUDFLARE_CLOUDFLARED_VERSION }}
-            then
-              echo "IS_RELEASE=false" | tee -a $GITHUB_ENV
-            else
-              echo "IS_RELEASE=true" | tee -a $GITHUB_ENV
-            fi
+            echo "RELEASE_VERSION=dev" | tee -a $GITHUB_ENV
+            echo "BUILD_VERSION=refs/tags/d$(git rev-parse --short HEAD)" | tee -a $GITHUB_ENV
           else
-            echo "IS_RELEASE=false" | tee -a $GITHUB_ENV
+            echo "RELEASE_VERSION=latest"
+            echo "BUILD_VERSION=refs/tags/v${{ env.CONTROLLER_VERSION }}" | tee -a $GITHUB_ENV
           fi
 
       - name: Run GoReleaser RELEASE
         uses: goreleaser/goreleaser-action@v4
-        if: ${{ env.IS_RELEASE == 'true' }}
         with:
-          version: latest
+          version: ${{ env.RELEASE_VERSION }}
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_REF: ${{ env.BUILD_VERSION }}
           CLOUDFLARE_CLOUDFLARED_VERSION: ${{ env.CLOUDFLARE_CLOUDFLARED_VERSION }}
 
 
