--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -76,6 +76,8 @@ jobs:
             then
               echo "RELEASE_VERSION=dev" | tee -a $GITHUB_ENV
               echo "BUILD_VERSION=refs/tags/d$(git rev-parse --short HEAD)" | tee -a $GITHUB_ENV
+            else
+              echo "SKIP-RELEASE"
             fi
           else
             echo "RELEASE_VERSION=latest"
@@ -83,6 +85,7 @@ jobs:
           fi
 
       - name: Run GoReleaser RELEASE
+        if: ${{ env.BUILD_VERSION != '' }}
         uses: goreleaser/goreleaser-action@v4
         with:
           version: ${{ env.RELEASE_VERSION }}
