--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,17 +50,11 @@ jobs:
       - name: Get Latest Cloudflared Version
         run: |
           node .github/workflows/query_versions.js cloudflare/cloudflared | tee -a $GITHUB_ENV
-          if [[ ${{ github.ref }} == refs/tags/v* ]]
-          then
-             echo "CONTROLLER_VERSION=$(echo ${{ github.ref }} | sed s/^.*v//)" | tee -a $GITHUB_ENV
-          fi
 
       - name: Set up Docker Buildx
-        if: ${{ env.CONTROLLER_VERSION != '' }}
         uses: docker/setup-buildx-action@v2
 
       - name: Docker Login
-        if: ${{ env.CONTROLLER_VERSION != '' }}
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -68,20 +62,19 @@ jobs:
           password: ${{ secrets.GH_TOKEN }}
 
       - name: Check image
-        if: ${{ env.CONTROLLER_VERSION != '' }}
         run: |
-          if docker manifest inspect  ghcr.io/mabels/cloudflared-controller:${{ env.CONTROLLER_VERSION }}-cfd${{ env.CLOUDFLARE_CLOUDFLARED_VERSION }}
+          if [[ ${{ github.ref }} == refs/tags/v* ]]
           then
-            if [ "${{ env.CONTROLLER_VERSION }}" == "" ]
-            then
-              echo "RELEASE_VERSION=dev" | tee -a $GITHUB_ENV
-              echo "BUILD_VERSION=refs/tags/d$(git rev-parse --short HEAD)" | tee -a $GITHUB_ENV
-            else
-              echo "SKIP-RELEASE"
-            fi
+            CTRL_VERSION=refs/tags/v${{ env.CONTROLLER_VERSION }} 
+          else
+            CTRL_VERSION=refs/tags/d$(git rev-parse --short HEAD)"   
+          fi
+          if docker manifest inspect ghcr.io/mabels/cloudflared-controller:${CTRL_VERSION}-cfd${{ env.CLOUDFLARE_CLOUDFLARED_VERSION }}
+          then
+            echo "SKIP-RELEASE"
           else
             echo "RELEASE_VERSION=latest"
-            echo "BUILD_VERSION=refs/tags/v${{ env.CONTROLLER_VERSION }}-cfd${{ env.CLOUDFLARE_CLOUDFLARED_VERSION }}" | tee -a $GITHUB_ENV
+            echo "BUILD_VERSION=refs/tags/${CTRL_VERSION}-cfd${{ env.CLOUDFLARE_CLOUDFLARED_VERSION }}" | tee -a $GITHUB_ENV
           fi
 
       - name: Run GoReleaser RELEASE
