chore: ref or not to ref

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -65,9 +65,9 @@ jobs:
         run: |
           if [[ ${{ github.ref }} == refs/tags/v* ]]
           then
-            CTRL_VERSION=refs/tags/v${{ env.CONTROLLER_VERSION }} 
+            CTRL_VERSION=v${{ env.CONTROLLER_VERSION }} 
           else
-            CTRL_VERSION=refs/tags/d$(git rev-parse --short HEAD)
+            CTRL_VERSION=d$(git rev-parse --short HEAD)
           fi
           if docker manifest inspect ghcr.io/mabels/cloudflared-controller:${CTRL_VERSION}-cfd${{ env.CLOUDFLARE_CLOUDFLARED_VERSION }}
           then
@@ -75,6 +75,7 @@ jobs:
           else
             echo "RELEASE_VERSION=latest"
             echo "BUILD_VERSION=refs/tags/${CTRL_VERSION}-cfd${{ env.CLOUDFLARE_CLOUDFLARED_VERSION }}" | tee -a $GITHUB_ENV
+            git tag ${CTRL_VERSION}-cfd${{ env.CLOUDFLARE_CLOUDFLARED_VERSION }}
           fi
 
       - name: Run GoReleaser RELEASE
