--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,5 +1,3 @@
-env:
-  - CFD_VERSION={{ .Env.CLOUDFLARE_CLOUDFLARED_VERSION }}
 before:
   hooks:
     - go mod download
@@ -50,7 +48,7 @@ changelog:
 
 # .goreleaser.yaml
 dockers:
-- image_templates: ["ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-cfd{{ .Env.CFD_VERSION }}-amd64"]
+- image_templates: ["ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-amd64"]
   use: buildx
   dockerfile: Dockerfile
   goarch: amd64
@@ -66,7 +64,7 @@ dockers:
   - --label=org.opencontainers.image.revision={{ .FullCommit }}
   - --label=org.opencontainers.image.licenses=APL2
 
-- image_templates: ["ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-cfd{{ .Env.CFD_VERSION }}-arm64v8"]
+- image_templates: ["ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-arm64v8"]
   dockerfile: Dockerfile
   use: buildx
   goarch: arm64
@@ -83,13 +81,13 @@ dockers:
   - --label=org.opencontainers.image.licenses=APL2
 
 docker_manifests:
-- name_template: ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-cfd{{ .Env.CFD_VERSION }}
+- name_template: ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}
   image_templates:
-  - ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-cfd{{ .Env.CFD_VERSION }}-amd64
-  - ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-cfd{{ .Env.CFD_VERSION }}-arm64v8
+  - ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-amd64
+  - ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-arm64v8
 - name_template: ghcr.io/mabels/{{ .ProjectName }}:latest
   image_templates:
-  - ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-cfd{{ .Env.CFD_VERSION }}-amd64
-  - ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-cfd{{ .Env.CFD_VERSION }}-arm64v8
+  - ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-amd64
+  - ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-arm64v8
 
 
