--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,16 +36,6 @@ jobs:
         run: |
           node .github/workflows/query_versions.js cloudflare/cloudflared | tee -a $GITHUB_ENV
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Docker Login
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GH_TOKEN }}
-
       - name: 'Get Current tag'
         id: currentTag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
@@ -58,11 +48,18 @@ jobs:
         with:
           version: ${{ steps.currentTag.outputs.tag }}
 
+      - name: Docker Login
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GH_TOKEN }}
+
       - name: Check image
         run: |
           if [[ ${{ github.ref }} == refs/tags/v* ]]
           then
-            CTRL_VERSION=$(echo ${{ github.ref }} | sed 's|^refs/tags/||'
+            CTRL_VERSION=$(echo ${{ github.ref }} | sed 's|^refs/tags/||')
             env | grep GITHUB
           else
             if [[ ${{ github.event_name }} == schedule ]]
