--- a/.github/workflows/goreleaser.yaml
+++ b/.github/workflows/goreleaser.yaml
@@ -34,6 +34,16 @@ jobs:
       - name: CFD_VERSION
         run: echo "CFD_VERSION=$(echo ${{ github.ref }} | sed 's/.*cfd//') | tee -a $GITHUB_ENV
       
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Docker Login
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GH_TOKEN }}
+
       - name: Run GoReleaser RELEASE
         uses: goreleaser/goreleaser-action@v4
         with:
