--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -79,7 +79,7 @@ jobs:
           fi
 
       - name: Commit changes
-        if: ${{ env.RELEASE_VERSION == latest }}
+        if: ${{ env.RELEASE_VERSION == 'latest' }}
         uses: EndBug/add-and-commit@v9
         with:
           author_name: Build Version
