--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -85,7 +85,7 @@ docker_manifests:
   image_templates:
   - ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-amd64
   - ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-arm64v8
-- name_template: ghcr.io/mabels/{{ .ProjectName }}:latest
+- name_template: ghcr.io/mabels/{{ .ProjectName }}:{{ .Env.RELEASE_TAG }}
   image_templates:
   - ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-amd64
   - ghcr.io/mabels/{{ .ProjectName }}:{{ .Version }}-arm64v8
