--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Check image
         run: |
-          if [[ ${{ env.GITHUB_REF_NAME }} =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]
+          if [[ ${{ github.ref }} =~ ^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+$ ]]
           then
             CTRL_VERSION=$(echo ${{ github.ref }} | sed 's|^refs/tags/||')
             echo RELEASE_TAG=latest | tee -a $GITHUB_ENV
