chore: check if we need a new crd

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,8 +39,9 @@ jobs:
           kubectl apply -f build-crd/access-group.example.yaml
           kubectl apply -f build-crd/cfd-tunnel.example.yaml
           kubectl apply -f build-crd/cfd-tunnel-config.example.yaml
-          git add cloudflare-schema.crds.json
-          git commit -am "chore: update build time cloudflare-schema.crds.json"
+          git diff --exit-code
+          # git add cloudflare-schema.crds.json
+          # git commit -am "chore: update build time cloudflare-schema.crds.json"
 
       - name: Get Latest Cloudflared Version
         run: |
