--- a/build-crd/cfd-tunnel.example.yaml
+++ b/build-crd/cfd-tunnel.example.yaml
@@ -1,4 +1,4 @@
-apiVersion: cloudflare.adviser.com/v1beta1
+apiVersion: cloudflare.adviser.com/v1alpha1
 kind: CFDTunnel
 metadata:
   name: example
