--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,16 +45,19 @@ jobs:
             if [[ ${{ github.ref }} =~ ^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+$ ]]
             then
               CTRL_VERSION=$(echo ${{ github.ref }} | sed 's|^refs/tags/||')
+              GIT_REF=${{ github.ref }}
               echo RELEASE_TAG=latest | tee -a $GITHUB_ENV
               echo PRERELEASE=false | tee -a $GITHUB_ENV
             else
               if [ "${{ github.event_name }}" = schedule -o -n "${{ inputs.tag }}" ]
               then
                  CTRL_VERSION=v${{ steps.currentTag.outputs.tag }}
+                 GIT_REF=${{ steps.currentTag.outputs.tag }}
                  echo RELEASE_TAG=latest | tee -a $GITHUB_ENV
                  echo PRERELEASE=false | tee -a $GITHUB_ENV
               else
                  CTRL_VERSION=v${{ steps.semvers.outputs.patch }}-pre$(git rev-parse --short HEAD)
+                 GIT_REF=${{ github.ref }}
                  echo PRERELEASE=true | tee -a $GITHUB_ENV
                  echo RELEASE_TAG=dev | tee -a $GITHUB_ENV
               fi
@@ -67,6 +70,7 @@ jobs:
               echo "PUSH_TAG=needed" | tee -a $GITHUB_ENV
               echo "BUILD_VERSION=$BUILD_VERSION" | tee -a $GITHUB_ENV
               echo "CTRL_VERSION=$CTRL_VERSION" | tee -a $GITHUB_ENV
+              echo "GIT_REF=$GIT_REF" | tee -a $GITHUB_ENV
               # git tag $BUILD_VERSION
             fi
 
@@ -74,7 +78,7 @@ jobs:
         if: ${{ env.PUSH_TAG == 'needed' }}
         uses: actions/checkout@v4
         with:
-              ref: ${{ env.CTRL_VERSION }}
+              ref: ${{ env.GIT_REF }}
               fetch-depth: 0
 
       - name: Set up Go
