--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,11 +33,11 @@ jobs:
           echo "-1"
           git tag
           echo "-2"
-          git tag | egrep '^v\d+\.\d+\.\d+$'
+          git tag | egrep '^v[0-9][0-9]*\.[0-9][0-9]*\.[0-9][0-9]*$'
           echo "-3"
-          git tag | egrep '^v\d+\.\d+\.\d+$' | sort -t . -k1,1n -k2,2n -k3,3n
+          git tag | egrep '^v[0-9][0-9]*\.[0-9][0-9]*\.[0-9][0-9]*$' | sort -t . -k1,1n -k2,2n -k3,3n
           echo "-4"
-          echo LAST_RELEASE=$(git tag  | egrep '^v\d+\.\d+\.\d+$' | sort -t . -k1,1n -k2,2n -k3,3n | tail -1) | tee -a $GITHUB_ENV
+          echo LAST_RELEASE=$(git tag  | egrep '^v[0-9][0-9]*\.[0-9][0-9]*\.[0-9][0-9]*$' | sort -t . -k1,1n -k2,2n -k3,3n | tail -1) | tee -a $GITHUB_ENV
 
       - name: 'Get next minor version'
         id: semvers
