--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,13 +30,7 @@ jobs:
 
       - name: 'Get LAST_RELEASE'
         run: |
-          echo "-1"
-          git tag
-          echo "-2"
-          git tag | egrep '^v[0-9][0-9]*\.[0-9][0-9]*\.[0-9][0-9]*$'
-          echo "-3"
-          git tag | egrep '^v[0-9][0-9]*\.[0-9][0-9]*\.[0-9][0-9]*$' | sort -t . -k1,1n -k2,2n -k3,3n
-          echo "-4"
+          echo PREV_RELEASE=$(git tag  | egrep '^v[0-9][0-9]*\.[0-9][0-9]*\.[0-9][0-9]*$' | sort -t . -k1,1n -k2,2n -k3,3n | tail -2 | head -1) | tee -a $GITHUB_ENV
           echo LAST_RELEASE=$(git tag  | egrep '^v[0-9][0-9]*\.[0-9][0-9]*\.[0-9][0-9]*$' | sort -t . -k1,1n -k2,2n -k3,3n | tail -1) | tee -a $GITHUB_ENV
 
       - name: 'Get next minor version'
@@ -63,6 +57,7 @@ jobs:
               else
                  CTRL_VERSION=v${{ steps.semvers.outputs.patch }}-pre$(git rev-parse --short HEAD)
                  GIT_REF=${{ github.ref }}
+                 echo PREV_RELEASE=${{ env.LAST_RELEASE }} | tee -a $GITHUB_ENV
                  echo PRERELEASE=true | tee -a $GITHUB_ENV
                  echo RELEASE_TAG=dev | tee -a $GITHUB_ENV
               fi
@@ -136,5 +131,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GORELEASER_CURRENT_TAG: ${{ env.BUILD_VERSION }}
-          GORELEASER_PREVIOUS_TAG: ${{ steps.currentTag.outputs.tag }}
+          GORELEASER_PREVIOUS_TAG: ${{ env.PREV_RELEASE }}
 
