chore: fix the schedule thing

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -55,7 +55,7 @@ jobs:
               echo RELEASE_TAG=latest | tee -a $GITHUB_ENV
               echo PRERELEASE=false | tee -a $GITHUB_ENV
             else
-              if [ "${{ github.event_name }}" = schedule -o -n "${{ inputs.tag }}" ]
+              if [ "${{ github.event_name }}" = schedule -o -n "${{ inputs.schedule }}" ]
               then
                  CTRL_VERSION=v${{ env.LAST_RELEASE }}
                  GIT_REF=${{ env.LAST_RELEASE }}
