--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,20 +52,18 @@ jobs:
             then
               CTRL_VERSION=$(echo ${{ github.ref }} | sed 's|^refs/tags/||')
               GIT_REF=${{ github.ref }}
-              echo RELEASE_TAG=latest | tee -a $GITHUB_ENV
-              echo PRERELEASE=false | tee -a $GITHUB_ENV
+              echo RELEASE_ACTION="" | tee -a $GITHUB_ENV
             else
               if [ "${{ github.event_name }}" = schedule -o -n "${{ inputs.schedule }}" ]
               then
-                 CTRL_VERSION=v${{ env.LAST_RELEASE }}
+                 CTRL_VERSION=${{ env.LAST_RELEASE }}
                  GIT_REF=${{ env.LAST_RELEASE }}
-                 echo RELEASE_TAG=latest | tee -a $GITHUB_ENV
-                 echo PRERELEASE=false | tee -a $GITHUB_ENV
+                 echo RELEASE_ACTION="" | tee -a $GITHUB_ENV
               else
                  CTRL_VERSION=v${{ steps.semvers.outputs.patch }}-pre$(git rev-parse --short HEAD)
                  GIT_REF=${{ github.ref }}
                  echo PREV_RELEASE=${{ env.LAST_RELEASE }} | tee -a $GITHUB_ENV
-                 echo PRERELEASE=true | tee -a $GITHUB_ENV
+                 echo RELEASE_ACTION=--snapshot | tee -a $GITHUB_ENV
                  echo RELEASE_TAG=dev | tee -a $GITHUB_ENV
               fi
             fi
@@ -126,8 +124,8 @@ jobs:
         if: ${{ env.PUSH_TAG == 'needed' }}
         uses: goreleaser/goreleaser-action@v6
         with:
-          version: latest
-          args: release --clean
+          version: "~> v2"
+          args: release --clean ${{ env.RELEASE_ACTION }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GORELEASER_CURRENT_TAG: ${{ env.BUILD_VERSION }}
